# Snake-Game-cpp-macOS

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp  run.sh
src/: main.cpp
